--- a/react-sing/public/recorder.css
+++ b/react-sing/public/recorder.css
@@ -1,12 +1,13 @@
 #triangle{
+    /* display:'flex'; */
     width: 0;
 	height: 0;
 	border-top: 20px solid transparent;
 	border-left: 45px solid white;
     border-bottom: 20px solid transparent;
     border-radius: 5px;
-    margin-Top: 1.5%;
-    margin-left: 50.5% ;
+    margin-Top: 3%;
+    margin-left: 52.5% ;
     opacity: 0.3;
 }
 
@@ -16,14 +17,14 @@
     background-color: white;
     border-color: white;
     border-radius: 50%;
-    margin-top: 3.5%;
+    margin-top: 5%;
     opacity: 0.3;
-    margin-left:1.5%;
+    margin-left:52.5%;
 }
 
 #save-form{
     position:absolute;
-    margin-left: 50.2%;
+    margin-left: 52.5%;
 }
 
 #save-btn{
@@ -35,3 +36,7 @@
     margin-top: 3.5%;
     opacity: 0.3;
 }
+/* 
+canvas{
+    position: 'absolute'
+} */
